--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -7,27 +7,27 @@
             <div *ngIf="iFirst === 0" class="col-lg-6 col-md-12">
                 <div class="hero pos-relative mb-30">
                     <div class="hero__thumb" data-overlay="dark-gradient">
-                        <a href="#"><img src="{{ environment.apiEndpoint + 'media/' + firstArticle.image625x400 }}" alt="hero image"></a>
+                        <a [routerLink]="['/yayinlar/', firstArticle.id, firstArticle.makale_slug]"><img src="{{ environment.apiEndpoint + 'media/' + firstArticle.image625x400 }}" alt="hero image"></a>
                     </div>
                     <div class="hero__text">
-                        <span class="post-cat mb-10"><a href="#">{{ firstArticle.makale_kategori }}</a></span>
-                        <h3 class="pr-100"><a href="#">{{ firstArticle.makale_baslik }}</a></h3>
+                        <span class="post-cat mb-10"><a [routerLink]="['/yayinlar/', firstArticle.id, firstArticle.makale_slug]">{{ firstArticle.makale_kategori }}</a></span>
+                        <h3 class="pr-100"><a [routerLink]="['/yayinlar/', firstArticle.id, firstArticle.makale_slug]">{{ firstArticle.makale_baslik }}</a></h3>
                     </div>
                 </div>
             </div>
             <div *ngIf="iFirst === 1" class="col-lg-3 col-md-6">
                 <div class="hero pos-relative mb-30">
                     <div class="hero__thumb" data-overlay="dark-gradient">
-                        <a href="#">
+                        <a [routerLink]="['/yayinlar/', firstArticle.id, firstArticle.makale_slug]">
                             <img src="{{ environment.apiEndpoint + 'media/' + firstArticle.image297x400 }}" alt="hero image">
                         </a>
                     </div>
                     <div class="hero__text hero__text-small">
                         <span class="post-cat mb-10">
-                            <a href="#">{{ firstArticle.makale_kategori }}</a>
+                            <a [routerLink]="['/yayinlar/', firstArticle.id, firstArticle.makale_slug]">{{ firstArticle.makale_kategori }}</a>
                         </span>
                         <h3 class="pr-0">
-                            <a href="#">{{firstArticle.makale_baslik}}</a>
+                            <a [routerLink]="['/yayinlar/', firstArticle.id, firstArticle.makale_slug]">{{firstArticle.makale_baslik}}</a>
                         </h3>
                     </div>
                 </div>
@@ -73,11 +73,11 @@
         <div class="row row-10">
             <div class="col-20">
 
-              <ng-container *ngFor="let yaralamaItem of firstFourYaralama; let iYaralama = index">
-                <div *ngIf="iYaralama < 3" class="postbox mb-25">
+              <ng-container *ngFor="let uyusturucuItem of firstFourUyusturucumaddesuclari; let iUyusturucu = index">
+                <div *ngIf="iUyusturucu < 3" class="postbox mb-25">
                     <div class="postbox__thumb">
                         <a href="#">
-                            <img src="{{ environment.apiEndpoint + 'media/' + yaralamaItem.image240x160 }}" alt="hero image">
+                            <img src="{{ environment.apiEndpoint + 'media/' + uyusturucuItem.image240x160 }}" alt="hero image">
                         </a>
                     </div>
                     <div class="postbox__text pt-10">
@@ -85,13 +85,13 @@
                             <ul>
                                 <li>
                                     <i class="fas fa-calendar-alt"></i>
-                                    <span>{{ yaralamaItem.makale_yayintarihi }}</span>
+                                    <span>{{ uyusturucuItem.makale_yayintarihi }}</span>
                                 </li>
 
                             </ul>
                         </div>
                         <h4 class="pr-0">
-                            <a href="#">{{ yaralamaItem.makale_baslik }}</a>
+                            <a href="#">{{ uyusturucuItem.makale_baslik }}</a>
                         </h4>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
             <!-- 2 x 500x287 -->
             <div class="col-40">
 
-              <ng-container *ngFor="let hakaretTwo of FirstFourHakaret; let iHakaretTwo = index;">
+              <ng-container *ngFor="let hakaretTwo of firstFourHakaret; let iHakaretTwo = index;">
                 <div *ngIf="iHakaretTwo < 2" class="postbox mb-25">
                     <div class="postbox__thumb">
                         <a href="#">
@@ -210,88 +210,81 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-6">
                 <div class="section-title mb-30">
-                    <h2>Yaralama</h2>
-                </div>
-
-                <div class="postbox mb-25">
-                    <div class="postbox__thumb">
-                        <a href="#">
-                            <img src="assets/img/cat/cat1.jpg" alt="hero image">
-                        </a>
-                    </div>
-                    <div class="postbox__text pt-20">
-                        <h4 class="title-18 pr-0">
-                            <a href="#">Mustify Winner Is Rtired Because of Weaths Bads Ankle World Wide.</a>
-                        </h4>
-                        <div class="postbox__text-meta pb-10">
-                            <ul>
-                                <li>
-                                    <i class="fas fa-calendar-alt"></i>
-                                    <span>01 Sep 2018</span>
-                                </li>
-
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="cat-sm-post">
-                    <div class="post__small mb-30">
-                        <div class="post__small-thumb f-left">
-                            <a href="#">
-                                <img src="assets/img/trendy/xs/xs-12.jpg" alt="hero image">
-                            </a>
-                        </div>
-                        <div class="post__small-text fix pl-10">
-                            <h4 class="title-16 pr-0 mt-0">
-                                <a href="#">Hobots or Job Training: Mnutuers Grapple With How to Improve.</a>
-                            </h4>
-                            <div class="post__small-text-meta">
-                                <ul>
-                                    <li>
-                                        <i class="fas fa-calendar-alt"></i>
-                                        <span>01 Sep 2018</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="post__small mb-30">
-                        <div class="post__small-thumb f-left">
-                            <a href="#">
-                                <img src="assets/img/trendy/xs/xs-11.jpg" alt="hero image">
-                            </a>
-                        </div>
-                        <div class="post__small-text fix pl-10">
-                            <h4 class="title-16 pr-0 mt-0">
-                                <a href="#">Robots or Job Training: Manutues Grapple With How to Improve..</a>
-                            </h4>
-                            <div class="post__small-text-meta">
-                                <ul>
-                                    <li>
-                                        <i class="fas fa-calendar-alt"></i>
-                                        <span>01 Sep 2018</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6">
-                <div class="section-title mb-30">
                     <h2>Hakaret</h2>
                 </div>
 
-                <div class="postbox mb-25">
+
+                <ng-container *ngFor="let hakaretItem of firstFourHakaret; let hIndex = index;">
+                  <div *ngIf="hIndex === 0" class="postbox mb-25">
+                      <div class="postbox__thumb">
+                          <a href="#">
+                              <img src="{{ environment.apiEndpoint + 'media/' + hakaretItem.image500x287 }}" alt="hero image">
+                          </a>
+                      </div>
+                      <div class="postbox__text pt-20">
+                          <h4 class="title-18 pr-0">
+                              <a href="#">{{hakaretItem.makale_baslik}}</a>
+                          </h4>
+                          <div class="postbox__text-meta pb-10">
+                              <ul>
+                                  <li>
+                                      <i class="fas fa-calendar-alt"></i>
+                                      <span>{{hakaretItem.makale_yayintarihi}}</span>
+                                  </li>
+
+                              </ul>
+                          </div>
+                      </div>
+                  </div>
+                </ng-container>
+
+                <div class="cat-sm-post">
+
+                  <ng-container *ngFor="let hItemSmall of firstFourHakaret; let hIndexSmall = index;">
+                    <div *ngIf="hIndexSmall < 3 && hIndexSmall > 0" class="post__small mb-30">
+                        <div class="post__small-thumb f-left">
+                            <a href="#">
+                                <img src="{{environment.apiEndpoint + 'media/' + hItemSmall.image100x85}}" alt="hero image">
+                            </a>
+                        </div>
+                        <div class="post__small-text fix pl-10">
+                            <h4 class="title-16 pr-0 mt-0">
+                                <a href="#">{{hItemSmall.makale_baslik}}</a>
+                            </h4>
+                            <div class="post__small-text-meta">
+                                <ul>
+                                    <li>
+                                        <i class="fas fa-calendar-alt"></i>
+                                        <span>{{hItemSmall.makale_yayintarihi}}</span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                  </ng-container>
+
+                </div>
+
+
+
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6">
+                <div class="section-title mb-30">
+                    <h2>Yaralama</h2>
+                </div>
+
+              <ng-container *ngFor="let yaralamaItem of firstFourYaralama; let yIndex = index;">
+
+                <div class="postbox mb-25" *ngIf="yIndex === 0">
                     <div class="postbox__thumb">
                         <a href="#">
-                            <img src="assets/img/cat/cat2.jpg" alt="hero image">
+                            <img src="{{ environment.apiEndpoint + 'media/' + yaralamaItem.image500x287 }}" alt="hero image">
                         </a>
                     </div>
                     <div class="postbox__text pt-20">
                         <h4 class="title-18 pr-0">
-                            <a href="#">Robots or Job Training: Manutues Grapple With How to Improve.</a>
+                            <a href="#">{{yaralamaItem.makale_baslik}}</a>
                         </h4>
                         <div class="postbox__text-meta pb-10">
                             <ul>
@@ -306,68 +299,59 @@
                 </div>
 
                 <div class="cat-sm-post">
-                    <div class="post__small mb-30">
+
+                    <div *ngIf="yIndex > 0 && yIndex < 3" class="post__small mb-30">
                         <div class="post__small-thumb f-left">
                             <a href="#">
-                                <img src="assets/img/trendy/xs/xs-7.jpg" alt="hero image">
+                                <img src="{{ environment.apiEndpoint + 'media/' + yaralamaItem.image100x85 }}" alt="hero image">
                             </a>
                         </div>
                         <div class="post__small-text fix pl-10">
                             <h4 class="title-16 pr-0 mt-0">
-                                <a href="#">Canadian Shoppers Pay When Visa and MasterCard.</a>
+                                <a href="#">{{ yaralamaItem.makale_baslik }}</a>
                             </h4>
                             <div class="post__small-text-meta">
                                 <ul>
                                     <li>
                                         <i class="fas fa-calendar-alt"></i>
-                                        <span>01 Sep 2018</span>
+                                        <span>{{ yaralamaItem.makale_yayintarihi }}</span>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="post__small mb-30">
-                        <div class="post__small-thumb f-left">
-                            <a href="#">
-                                <img src="assets/img/trendy/xs/xs-8.jpg" alt="hero image">
-                            </a>
-                        </div>
-                        <div class="post__small-text fix pl-10">
-                            <h4 class="title-16 pr-0 mt-0">
-                                <a href="#">Who is next football Super Hero. Check the future star</a>
-                            </h4>
-                            <div class="post__small-text-meta">
-                                <ul>
-                                    <li>
-                                        <i class="fas fa-calendar-alt"></i>
-                                        <span>01 Sep 2018</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
+
+              </ng-container>
+
+
+
+
+
             </div>
             <div class="col-xl-4 col-lg-4 col-md-6 d-md-none d-lg-block">
                 <div class="section-title mb-30">
                     <h2>Örgüt Suçları</h2>
                 </div>
 
-                <div class="postbox mb-25">
+              <ng-container *ngFor="let orgutItem of firstFourOrgutsuclari; let iOrgut = index;">
+
+                <div *ngIf="iOrgut === 0" class="postbox mb-25">
                     <div class="postbox__thumb">
                         <a href="#">
-                            <img src="assets/img/cat/cat3.jpg" alt="hero image">
+                            <img src="{{ environment.apiEndpoint + 'media/' + orgutItem.image500x287 }}" alt="hero image">
                         </a>
                     </div>
                     <div class="postbox__text pt-20">
                         <h4 class="title-18 pr-0">
-                            <a href="#">Denying passports to Americans along the border throwing their citizens.</a>
+                            <a href="#">{{ orgutItem.makale_baslik }}</a>
                         </h4>
                         <div class="postbox__text-meta pb-10">
                             <ul>
                                 <li>
                                     <i class="fas fa-calendar-alt"></i>
-                                    <span>01 Sep 2018</span>
+                                    <span>{{ orgutItem.makale_yayintarihi }}</span>
                                 </li>
 
                             </ul>
@@ -376,47 +360,32 @@
                 </div>
 
                 <div class="cat-sm-post">
-                    <div class="post__small mb-30">
-                        <div class="post__small-thumb f-left">
-                            <a href="#">
-                                <img src="assets/img/trendy/xs/xs-10.jpg" alt="hero image">
-                            </a>
-                        </div>
-                        <div class="post__small-text fix pl-10">
-                            <h4 class="title-16 pr-0 mt-0">
-                                <a href="#">Hobots or Job Training: Mnutuers Grapple With How to Improve.</a>
-                            </h4>
-                            <div class="post__small-text-meta">
-                                <ul>
-                                    <li>
-                                        <i class="fas fa-calendar-alt"></i>
-                                        <span>01 Sep 2018</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="post__small mb-30">
-                        <div class="post__small-thumb f-left">
-                            <a href="#">
-                                <img src="assets/img/trendy/xs/xs-9.jpg" alt="hero image">
-                            </a>
-                        </div>
-                        <div class="post__small-text fix pl-10">
-                            <h4 class="title-16 pr-0 mt-0">
-                                <a href="#">Robots or Job Training: Manutues Grapple With How to Improve..</a>
-                            </h4>
-                            <div class="post__small-text-meta">
-                                <ul>
-                                    <li>
-                                        <i class="fas fa-calendar-alt"></i>
-                                        <span>01 Sep 2018</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+
+                  <div *ngIf="iOrgut > 0 && iOrgut < 3" class="post__small mb-30">
+                      <div class="post__small-thumb f-left">
+                          <a href="#">
+                              <img src="{{ environment.apiEndpoint + 'media/' + orgutItem.image100x85 }}" alt="hero image">
+                          </a>
+                      </div>
+                      <div class="post__small-text fix pl-10">
+                          <h4 class="title-16 pr-0 mt-0">
+                              <a href="#">{{ orgutItem.makale_baslik }}</a>
+                          </h4>
+                          <div class="post__small-text-meta">
+                              <ul>
+                                  <li>
+                                      <i class="fas fa-calendar-alt"></i>
+                                      <span>{{ orgutItem.makale_yayintarihi }}</span>
+                                  </li>
+                              </ul>
+                          </div>
+                      </div>
+                  </div>
+
                 </div>
+
+              </ng-container>
+
             </div>
         </div>
     </div>
