--- a/src/app/makaledetay/makaledetay.component.html
+++ b/src/app/makaledetay/makaledetay.component.html
@@ -1,181 +1,151 @@
-<div class="post-details">
-                                <h2 class="details-title mb-15">Group continues to sell and market memberships to Premier country club despite.</h2>
 
-                                <!-- meta -->
-                                <div class="postbox__text-meta pb-30">
-                                    <ul>
-                                        <li>
-                                            <i class="far fa-user-circle"></i>
-                                            <span>Jonathon Doe</span>
-                                        </li>
-                                        <li>
-                                            <i class="fas fa-calendar-alt"></i>
-                                            <span>01 Sep 2018</span>
-                                        </li>
-                        
-                                    </ul>
-                                </div>
+<ng-container *ngIf="makale">
 
+  <div class="post-details">
+      <h2 class="details-title mb-15">{{ makale.makale_baslik }}</h2>
 
+      <!-- meta -->
+      <div class="postbox__text-meta pb-30">
+          <ul>
+              <li>
+                  <i class="fas fa-calendar-alt"></i>
+                  <span>{{ makale.makale_yayintarihi }}</span>
+              </li>
 
-                                 <!-- post-thumb -->
-                                <div class="post-thumb mb-25">
-                                    <img src="assets/img/details/post.jpg" alt="">
-                                </div>
-
-                                <!-- post-content -->
-                                <div class="post-content">
-                                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est Cura tbitur pretium
-                                    tincidunt lacus. Nulla gravida orci a odio. Nullam varius turpis et commodo pharetra es ero biben dum elit nec luctus magna
-                                    felis sollicitudin mauris. Integer in mauris eu nibh euismod gravida. Duis ac tellus erisus vulputate vehicula. Donec lobortis
-                                    risus a elit. Etiam tempor. Ut ullamcorper ligula eu tempor congue eros est euismod turpis id tincidunt sapien risus.</p>
-                                    <blockquote>
-                                        <p>This is a simple example of a styled blockquote. A blockquote tag typically specifies a section that is quoted from another
-                                            source of some sort, or highlighting text in your post.</p>
-                                        <footer>Salim Rana</footer>
-                                    </blockquote>
-                                    <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you
-                                    a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder
-                                    of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do
-                                    not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who
-                                    loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in
-                                    which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious
-                                    physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to
-                                    enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure</p>
-                                    <div class="inner-post mb-20 mt-20">
-                                        <img src="assets/img/details/post-2.jpg" alt="">
-                                    </div>
-                                    <p>Gathering great you’ll it. Light all may. Wherein two they’re cattle night called likeness upon. Hath days he yielding whales
-                                    morning to creature. Two Seasons second saying let third fourth tree doesn’t stars divide. They’re can’t fruitful is sea
-                                    over that unto created days. To. Beginning don’t it second. Isn’t give earth created waters thing void, third.</p>
-                                    <p>Open likeness creepeth created he male behold that wherein wherein earth seas multiply from living two fruit together. Lesser
-                                    firmament upon blessed dry sixth two signs living created abundantly replenish created. Fowl female appear also. Under unto
-                                    was evening which gathered fourth sixth. Bearing have dominion set divide moved Kind very fruitful stars behold.</p>
-                                </div>
-
-                                <!-- content__tags -->
-                                <div class="content__tags mt-30">
-                                    <span>Post Tags:</span>
-                                    <span class="content__tags-list">
-                                        <a href="#0">orci</a>
-                                        <a href="#0">lectus</a>
-                                        <a href="#0">varius</a>
-                                        <a href="#0">turpis</a>
-                                    </span>
-                                </div>
-
-
-                                 <!-- s-content__pagenav -->
-                                <div class="s-content__pagenav mt-60">
-                                    <div class="s-content__nav">
-                                       <div class="row">
-                                           <div class="col-md-6">
-                                                <div class="s-content__prev mb-30">
-                                                    <a href="#0" rel="prev">
-                                                        <span>Previous Post</span>
-                                                         Farmers plead for bullets to put down emaciated stock
-                                                    </a>
-                                                </div>
-                                           </div>
-                                           <div class="col-md-6">
-                                                <div class="s-content__next mb-30 text-left text-md-right">
-                                                    <a href="#0" rel="next">
-                                                        <span>Next Post</span>
-                                                         Nahan downplays Liberal lership tensions after white ant
-                                                    </a>
-                                                </div>
-                                           </div>
-                                       </div>
-                                    </div>
-                                </div>
-
-                                 <!-- also-like -->
-                                <div class="also-like mt-30">
-                                    <div class="section-title mb-30">
-                                        <h2>You may also like</h2>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-lg-4 col-md-4">
-                                            <div class="postbox mb-30">
-                                                <div class="postbox__thumb">
-                                                    <a href="#">
-                                                        <img class="img-100" src="assets/img/trendy/sm1.jpg" alt="hero image">
-                                                    </a>
-                                                </div>
-                                                <div class="postbox__text pt-10">
-                                                    <div class="postbox__text-meta pb-10">
-                                                        <ul>
-                                                            <li>
-                                                                <i class="fas fa-calendar-alt"></i>
-                                                                <span>01 Sep 2018</span>
-                                                            </li>
-                                                            <li>
-                                                                <i class="far fa-comment"></i>
-                                                                <span>(03)</span>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                    <h4 class="pr-0">
-                                                        <a href="#">Paul Manafort’s Accountant Testifies She Helped Alter Financial</a>
-                                                    </h4>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-4 col-md-4">
-                                            <div class="postbox mb-30">
-                                                <div class="postbox__thumb">
-                                                    <a href="#">
-                                                        <img class="img-100" src="assets/img/trendy/sm2.jpg" alt="hero image">
-                                                    </a>
-                                                </div>
-                                                <div class="postbox__text pt-10">
-                                                    <div class="postbox__text-meta pb-10">
-                                                        <ul>
-                                                            <li>
-                                                                <i class="fas fa-calendar-alt"></i>
-                                                                <span>01 Sep 2018</span>
-                                                            </li>
-                                                            <li>
-                                                                <i class="far fa-comment"></i>
-                                                                <span>(03)</span>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                    <h4 class="pr-0">
-                                                        <a href="#">Paul Manafort’s Accountant Testifies She Helped Alter Financial</a>
-                                                    </h4>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-4 col-md-4">
-                                            <div class="postbox mb-30">
-                                                <div class="postbox__thumb">
-                                                    <a href="#">
-                                                        <img class="img-100" src="assets/img/trendy/sm3.jpg" alt="hero image">
-                                                    </a>
-                                                </div>
-                                                <div class="postbox__text pt-10">
-                                                    <div class="postbox__text-meta pb-10">
-                                                        <ul>
-                                                            <li>
-                                                                <i class="fas fa-calendar-alt"></i>
-                                                                <span>01 Sep 2018</span>
-                                                            </li>
-                                                            <li>
-                                                                <i class="far fa-comment"></i>
-                                                                <span>(03)</span>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                    <h4 class="pr-0">
-                                                        <a href="#">Paul Manafort’s Accountant Testifies She Helped Alter Financial</a>
-                                                    </h4>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+          </ul>
+      </div>
 
 
 
-                            </div>
+       <!-- post-thumb -->
+      <div class="post-thumb mb-25">
+          <img style="width: 100%;" src="{{ environment.apiEndpoint + 'media/' + makale.image625x400 }}" alt="">
+      </div>
+
+      <!-- post-content -->
+      <div class="post-content">
+        <div [innerHTML]="makale.makale_mesaj"></div>
+      </div>
+
+      <!-- content__tags -->
+      <div class="content__tags mt-30">
+          <span>Anahtar Kelimeler: </span>
+          <span class="content__tags-list">
+              <a *ngFor="let makaletag of makale.tag" href="#0">{{makaletag}}</a>
+          </span>
+      </div>
+
+
+       <!-- s-content__pagenav -->
+      <div class="s-content__pagenav mt-60">
+          <div class="s-content__nav">
+             <div class="row">
+                 <div class="col-md-6">
+                      <div class="s-content__prev mb-30">
+                          <a href="#0" rel="prev">
+                              <span>Previous Post</span>
+                               Farmers plead for bullets to put down emaciated stock
+                          </a>
+                      </div>
+                 </div>
+                 <div class="col-md-6">
+                      <div class="s-content__next mb-30 text-left text-md-right">
+                          <a href="#0" rel="next">
+                              <span>Next Post</span>
+                               Nahan downplays Liberal lership tensions after white ant
+                          </a>
+                      </div>
+                 </div>
+             </div>
+          </div>
+      </div>
+
+       <!-- also-like -->
+      <div class="also-like mt-30">
+          <div class="section-title mb-30">
+              <h2>You may also like</h2>
+          </div>
+          <div class="row">
+              <div class="col-lg-4 col-md-4">
+                  <div class="postbox mb-30">
+                      <div class="postbox__thumb">
+                          <a href="#">
+                              <img class="img-100" src="assets/img/trendy/sm1.jpg" alt="hero image">
+                          </a>
+                      </div>
+                      <div class="postbox__text pt-10">
+                          <div class="postbox__text-meta pb-10">
+                              <ul>
+                                  <li>
+                                      <i class="fas fa-calendar-alt"></i>
+                                      <span>01 Sep 2018</span>
+                                  </li>
+                                  <li>
+                                      <i class="far fa-comment"></i>
+                                      <span>(03)</span>
+                                  </li>
+                              </ul>
+                          </div>
+                          <h4 class="pr-0">
+                              <a href="#">Paul Manafort’s Accountant Testifies She Helped Alter Financial</a>
+                          </h4>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-4">
+                  <div class="postbox mb-30">
+                      <div class="postbox__thumb">
+                          <a href="#">
+                              <img class="img-100" src="assets/img/trendy/sm2.jpg" alt="hero image">
+                          </a>
+                      </div>
+                      <div class="postbox__text pt-10">
+                          <div class="postbox__text-meta pb-10">
+                              <ul>
+                                  <li>
+                                      <i class="fas fa-calendar-alt"></i>
+                                      <span>01 Sep 2018</span>
+                                  </li>
+                                  <li>
+                                      <i class="far fa-comment"></i>
+                                      <span>(03)</span>
+                                  </li>
+                              </ul>
+                          </div>
+                          <h4 class="pr-0">
+                              <a href="#">Paul Manafort’s Accountant Testifies She Helped Alter Financial</a>
+                          </h4>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-4">
+                  <div class="postbox mb-30">
+                      <div class="postbox__thumb">
+                          <a href="#">
+                              <img class="img-100" src="assets/img/trendy/sm3.jpg" alt="hero image">
+                          </a>
+                      </div>
+                      <div class="postbox__text pt-10">
+                          <div class="postbox__text-meta pb-10">
+                              <ul>
+                                  <li>
+                                      <i class="fas fa-calendar-alt"></i>
+                                      <span>01 Sep 2018</span>
+                                  </li>
+                                  <li>
+                                      <i class="far fa-comment"></i>
+                                      <span>(03)</span>
+                                  </li>
+                              </ul>
+                          </div>
+                          <h4 class="pr-0">
+                              <a href="#">Paul Manafort’s Accountant Testifies She Helped Alter Financial</a>
+                          </h4>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+</ng-container>
